src/main/gen/WebPPParser.java
// Generated from /home/islan/IdeaProjects/WebPP/src/main/WebPP.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class WebPPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, STRING=35, ID=36, COMMENT=37, WS=38;
	public static final int
		RULE_webppFile = 0, RULE_interfaceDeclaration = 1, RULE_doctypeAnnotation = 2, 
		RULE_htmlElement = 3, RULE_langAttribute = 4, RULE_headElement = 5, RULE_metaElement = 6, 
		RULE_charsetAttribute = 7, RULE_nameContentAttributes = 8, RULE_nameValuePair = 9, 
		RULE_titleElement = 10, RULE_bodyElement = 11, RULE_pElement = 12, RULE_h1Element = 13, 
		RULE_h2Element = 14, RULE_h3Element = 15, RULE_h4Element = 16, RULE_h5Element = 17, 
		RULE_h6Element = 18, RULE_ulElement = 19, RULE_aElement = 20, RULE_hrefAttribute = 21, 
		RULE_abbrElement = 22, RULE_titleAttribute = 23, RULE_audioElement = 24, 
		RULE_sourceElement = 25, RULE_srcValuePair = 26, RULE_hrElement = 27, 
		RULE_dialogElement = 28, RULE_liElement = 29, RULE_comments = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"webppFile", "interfaceDeclaration", "doctypeAnnotation", "htmlElement", 
			"langAttribute", "headElement", "metaElement", "charsetAttribute", "nameContentAttributes", 
			"nameValuePair", "titleElement", "bodyElement", "pElement", "h1Element", 
			"h2Element", "h3Element", "h4Element", "h5Element", "h6Element", "ulElement", 
			"aElement", "hrefAttribute", "abbrElement", "titleAttribute", "audioElement", 
			"sourceElement", "srcValuePair", "hrElement", "dialogElement", "liElement", 
			"comments"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'interface'", "'{'", "'}'", "'@Doctype'", "'('", "')'", "'html'", 
			"'lang'", "'='", "'head'", "'meta'", "'charset'", "','", "'name'", "'content'", 
			"'title'", "'body'", "'p'", "'h1'", "'h2'", "'h3'", "'h4'", "'h5'", "'h6'", 
			"'ul'", "'a'", "'href'", "'abbr'", "'audio'", "'src'", "'type'", "'hr'", 
			"'dialog'", "'li'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "STRING", 
			"ID", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "WebPP.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WebPPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WebppFileContext extends ParserRuleContext {
		public InterfaceDeclarationContext interfaceDeclaration() {
			return getRuleContext(InterfaceDeclarationContext.class,0);
		}
		public WebppFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_webppFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).enterWebppFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).exitWebppFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebPPVisitor ) return ((WebPPVisitor<? extends T>)visitor).visitWebppFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WebppFileContext webppFile() throws RecognitionException {
		WebppFileContext _localctx = new WebppFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_webppFile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			interfaceDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceDeclarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(WebPPParser.ID, 0); }
		public DoctypeAnnotationContext doctypeAnnotation() {
			return getRuleContext(DoctypeAnnotationContext.class,0);
		}
		public HtmlElementContext htmlElement() {
			return getRuleContext(HtmlElementContext.class,0);
		}
		public InterfaceDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).enterInterfaceDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).exitInterfaceDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebPPVisitor ) return ((WebPPVisitor<? extends T>)visitor).visitInterfaceDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InterfaceDeclarationContext interfaceDeclaration() throws RecognitionException {
		InterfaceDeclarationContext _localctx = new InterfaceDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_interfaceDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(T__0);
			setState(65);
			match(ID);
			setState(66);
			match(T__1);
			setState(67);
			doctypeAnnotation();
			setState(68);
			htmlElement();
			setState(69);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DoctypeAnnotationContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(WebPPParser.STRING, 0); }
		public DoctypeAnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doctypeAnnotation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).enterDoctypeAnnotation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).exitDoctypeAnnotation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebPPVisitor ) return ((WebPPVisitor<? extends T>)visitor).visitDoctypeAnnotation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DoctypeAnnotationContext doctypeAnnotation() throws RecognitionException {
		DoctypeAnnotationContext _localctx = new DoctypeAnnotationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_doctypeAnnotation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(T__3);
			setState(72);
			match(T__4);
			setState(73);
			match(STRING);
			setState(74);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlElementContext extends ParserRuleContext {
		public LangAttributeContext langAttribute() {
			return getRuleContext(LangAttributeContext.class,0);
		}
		public HeadElementContext headElement() {
			return getRuleContext(HeadElementContext.class,0);
		}
		public BodyElementContext bodyElement() {
			return getRuleContext(BodyElementContext.class,0);
		}
		public HtmlElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).enterHtmlElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).exitHtmlElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebPPVisitor ) return ((WebPPVisitor<? extends T>)visitor).visitHtmlElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlElementContext htmlElement() throws RecognitionException {
		HtmlElementContext _localctx = new HtmlElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_htmlElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__6);
			setState(77);
			match(T__1);
			setState(78);
			langAttribute();
			setState(79);
			headElement();
			setState(80);
			bodyElement();
			setState(81);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LangAttributeContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(WebPPParser.STRING, 0); }
		public LangAttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_langAttribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).enterLangAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).exitLangAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebPPVisitor ) return ((WebPPVisitor<? extends T>)visitor).visitLangAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LangAttributeContext langAttribute() throws RecognitionException {
		LangAttributeContext _localctx = new LangAttributeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_langAttribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(T__7);
			setState(84);
			match(T__8);
			setState(85);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeadElementContext extends ParserRuleContext {
		public MetaElementContext metaElement() {
			return getRuleContext(MetaElementContext.class,0);
		}
		public TitleElementContext titleElement() {
			return getRuleContext(TitleElementContext.class,0);
		}
		public HeadElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).enterHeadElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).exitHeadElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebPPVisitor ) return ((WebPPVisitor<? extends T>)visitor).visitHeadElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeadElementContext headElement() throws RecognitionException {
		HeadElementContext _localctx = new HeadElementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_headElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(T__9);
			setState(88);
			match(T__1);
			setState(89);
			metaElement();
			setState(90);
			titleElement();
			setState(91);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MetaElementContext extends ParserRuleContext {
		public List<CharsetAttributeContext> charsetAttribute() {
			return getRuleContexts(CharsetAttributeContext.class);
		}
		public CharsetAttributeContext charsetAttribute(int i) {
			return getRuleContext(CharsetAttributeContext.class,i);
		}
		public List<NameContentAttributesContext> nameContentAttributes() {
			return getRuleContexts(NameContentAttributesContext.class);
		}
		public NameContentAttributesContext nameContentAttributes(int i) {
			return getRuleContext(NameContentAttributesContext.class,i);
		}
		public MetaElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metaElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).enterMetaElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).exitMetaElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebPPVisitor ) return ((WebPPVisitor<? extends T>)visitor).visitMetaElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MetaElementContext metaElement() throws RecognitionException {
		MetaElementContext _localctx = new MetaElementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_metaElement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(T__10);
			setState(94);
			match(T__1);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__11 || _la==T__13) {
				{
				setState(97);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__11:
					{
					setState(95);
					charsetAttribute();
					}
					break;
				case T__13:
					{
					setState(96);
					nameContentAttributes();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CharsetAttributeContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(WebPPParser.STRING, 0); }
		public CharsetAttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_charsetAttribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).enterCharsetAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).exitCharsetAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebPPVisitor ) return ((WebPPVisitor<? extends T>)visitor).visitCharsetAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CharsetAttributeContext charsetAttribute() throws RecognitionException {
		CharsetAttributeContext _localctx = new CharsetAttributeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_charsetAttribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(T__11);
			setState(105);
			match(T__8);
			setState(106);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NameContentAttributesContext extends ParserRuleContext {
		public List<NameValuePairContext> nameValuePair() {
			return getRuleContexts(NameValuePairContext.class);
		}
		public NameValuePairContext nameValuePair(int i) {
			return getRuleContext(NameValuePairContext.class,i);
		}
		public NameContentAttributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nameContentAttributes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).enterNameContentAttributes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).exitNameContentAttributes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebPPVisitor ) return ((WebPPVisitor<? extends T>)visitor).visitNameContentAttributes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContentAttributesContext nameContentAttributes() throws RecognitionException {
		NameContentAttributesContext _localctx = new NameContentAttributesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_nameContentAttributes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			nameValuePair();
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__12) {
				{
				{
				setState(109);
				match(T__12);
				setState(110);
				nameValuePair();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NameValuePairContext extends ParserRuleContext {
		public List<TerminalNode> STRING() { return getTokens(WebPPParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(WebPPParser.STRING, i);
		}
		public NameValuePairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nameValuePair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).enterNameValuePair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).exitNameValuePair(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebPPVisitor ) return ((WebPPVisitor<? extends T>)visitor).visitNameValuePair(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameValuePairContext nameValuePair() throws RecognitionException {
		NameValuePairContext _localctx = new NameValuePairContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_nameValuePair);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(T__13);
			setState(117);
			match(T__8);
			setState(118);
			match(STRING);
			setState(119);
			match(T__12);
			setState(120);
			match(T__14);
			setState(121);
			match(T__8);
			setState(122);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TitleElementContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(WebPPParser.STRING, 0); }
		public TitleElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_titleElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).enterTitleElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).exitTitleElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebPPVisitor ) return ((WebPPVisitor<? extends T>)visitor).visitTitleElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TitleElementContext titleElement() throws RecognitionException {
		TitleElementContext _localctx = new TitleElementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_titleElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(T__15);
			setState(125);
			match(T__8);
			setState(126);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyElementContext extends ParserRuleContext {
		public List<PElementContext> pElement() {
			return getRuleContexts(PElementContext.class);
		}
		public PElementContext pElement(int i) {
			return getRuleContext(PElementContext.class,i);
		}
		public List<H1ElementContext> h1Element() {
			return getRuleContexts(H1ElementContext.class);
		}
		public H1ElementContext h1Element(int i) {
			return getRuleContext(H1ElementContext.class,i);
		}
		public List<H2ElementContext> h2Element() {
			return getRuleContexts(H2ElementContext.class);
		}
		public H2ElementContext h2Element(int i) {
			return getRuleContext(H2ElementContext.class,i);
		}
		public List<H3ElementContext> h3Element() {
			return getRuleContexts(H3ElementContext.class);
		}
		public H3ElementContext h3Element(int i) {
			return getRuleContext(H3ElementContext.class,i);
		}
		public List<H4ElementContext> h4Element() {
			return getRuleContexts(H4ElementContext.class);
		}
		public H4ElementContext h4Element(int i) {
			return getRuleContext(H4ElementContext.class,i);
		}
		public List<H5ElementContext> h5Element() {
			return getRuleContexts(H5ElementContext.class);
		}
		public H5ElementContext h5Element(int i) {
			return getRuleContext(H5ElementContext.class,i);
		}
		public List<H6ElementContext> h6Element() {
			return getRuleContexts(H6ElementContext.class);
		}
		public H6ElementContext h6Element(int i) {
			return getRuleContext(H6ElementContext.class,i);
		}
		public List<UlElementContext> ulElement() {
			return getRuleContexts(UlElementContext.class);
		}
		public UlElementContext ulElement(int i) {
			return getRuleContext(UlElementContext.class,i);
		}
		public List<AElementContext> aElement() {
			return getRuleContexts(AElementContext.class);
		}
		public AElementContext aElement(int i) {
			return getRuleContext(AElementContext.class,i);
		}
		public List<AbbrElementContext> abbrElement() {
			return getRuleContexts(AbbrElementContext.class);
		}
		public AbbrElementContext abbrElement(int i) {
			return getRuleContext(AbbrElementContext.class,i);
		}
		public List<AudioElementContext> audioElement() {
			return getRuleContexts(AudioElementContext.class);
		}
		public AudioElementContext audioElement(int i) {
			return getRuleContext(AudioElementContext.class,i);
		}
		public List<HrElementContext> hrElement() {
			return getRuleContexts(HrElementContext.class);
		}
		public HrElementContext hrElement(int i) {
			return getRuleContext(HrElementContext.class,i);
		}
		public List<DialogElementContext> dialogElement() {
			return getRuleContexts(DialogElementContext.class);
		}
		public DialogElementContext dialogElement(int i) {
			return getRuleContext(DialogElementContext.class,i);
		}
		public BodyElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bodyElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).enterBodyElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).exitBodyElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebPPVisitor ) return ((WebPPVisitor<? extends T>)visitor).visitBodyElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyElementContext bodyElement() throws RecognitionException {
		BodyElementContext _localctx = new BodyElementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_bodyElement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(T__16);
			setState(129);
			match(T__1);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 9529196576L) != 0)) {
				{
				setState(143);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__17:
					{
					setState(130);
					pElement();
					}
					break;
				case T__18:
					{
					setState(131);
					h1Element();
					}
					break;
				case T__19:
					{
					setState(132);
					h2Element();
					}
					break;
				case T__20:
					{
					setState(133);
					h3Element();
					}
					break;
				case T__21:
					{
					setState(134);
					h4Element();
					}
					break;
				case T__22:
					{
					setState(135);
					h5Element();
					}
					break;
				case T__23:
					{
					setState(136);
					h6Element();
					}
					break;
				case T__24:
					{
					setState(137);
					ulElement();
					}
					break;
				case T__25:
					{
					setState(138);
					aElement();
					}
					break;
				case T__27:
					{
					setState(139);
					abbrElement();
					}
					break;
				case T__28:
					{
					setState(140);
					audioElement();
					}
					break;
				case T__4:
					{
					setState(141);
					hrElement();
					}
					break;
				case T__32:
					{
					setState(142);
					dialogElement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(148);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PElementContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(WebPPParser.STRING, 0); }
		public PElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).enterPElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebPPListener ) ((WebPPListener)listener).exitPElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebPPVisitor ) return ((WebPPVisitor<? extends T>)visitor).visitPElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PElementContext pElement() throws RecognitionException {
		PElementContext _localctx = new PElementContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_pElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(T__17);
			setState(151);
			match(T__8);
			setState(152);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
